Fixed team endpoint security
