# backend/service/api.yaml
@@ -9,6 +9,70 @@ servers:
 - url: https://backend-dot-tournamaker.appspot.com
   description: Backend server
 paths:
+  /login:
+    post:
+      description: Get an authorization token
+      tags:
+      - general
+      
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                email:
+                  type: string
+                  description: The email to login with
+                password:
+                  type: string
+                  description: The password to login with
+      
+      responses:
+        200:
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  displayName:
+                    type: string
+                    description: The display name of the user in firebase
+                  email:
+                    type: string
+                    description: The email of the user
+                  expiresIn:
+                    type: string
+                    description: The number of seconds that the token expires in
+                  idToken:
+                    type: string
+                    description: The authorization token
+                  kind:
+                    type: string
+                    description: The type of token that was returned
+                  localId:
+                    type: string
+                    description: The firebase ID of the user
+                  refreshToken:
+                    type: string
+                    description: A token to use to refresh the authorization token
+                  registered:
+                    type: boolean
+                    description: Whether or not the user is registered
+        400:
+          description: Missing or invalid data in request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        
+        401:
+          description: Invalid login
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /user:
     get:
       description: Read the user object of the logged in user
@@ -58,7 +122,7 @@ paths:
                       type: string
                     
         401:
-          description: No authorization token given
+          description: Unauthorized
           content:
             application/json:
               schema:
@@ -101,7 +165,7 @@ paths:
                 type: string
                     
         401:
-          description: No authorization token given
+          description: Unauthorized
           content:
             application/json:
               schema:
@@ -109,6 +173,104 @@ paths:
                     
         400:
           description: No update fields provided or display name in use
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+      
+  /user/<team_key>/accept:
+    patch:
+      description: Accept an invite to a team
+      tags:
+      - user
+      
+      parameters:
+      - name: X-Authorization
+        in: header
+        schema:
+          type: string
+        required: true
+      - name: team_key
+        in: path
+        schema:
+          type: string
+        required: true
+          
+      responses:
+      
+        200:
+          description: A successful response
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Success
+        
+        400:
+          description: No invite to given team
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        
+        404:
+          description: Team not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+      
+  /user/<team_key>/decline:
+    delete:
+      description: Decline an invite to a team
+      tags:
+      - user
+      
+      parameters:
+      - name: X-Authorization
+        in: header
+        schema:
+          type: string
+        required: true
+      - name: team_key
+        in: path
+        schema:
+          type: string
+        required: true
+          
+      responses:
+      
+        200:
+          description: A successful response
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Success
+        
+        400:
+          description: No invite to given team
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        
+        404:
+          description: Team not found
           content:
             application/json:
               schema:
@@ -388,16 +550,23 @@ paths:
                 name:
                   description: The name of the new team
                   type: string
+                invited_members:
+                  description: A list of display names of members that should be invited to this team
+                  type: array
+                  items:
+                    type: string
       
       responses:
       
         200:
           description: A successful response
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: Success
+                type: object
+                properties:
+                  team_key:
+                    type: string
                 
         401:
           description: Unauthorized
@@ -471,90 +640,6 @@ paths:
           type: string
         required: true
       - name: user_key
-        in: path
-        schema:
-          type: string
-        required: true
-          
-      responses:
-      
-        200:
-          description: A successful response
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: Success
-        
-        401:
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        
-        404:
-          description: Team not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-      
-  /user/<team_key>/accept:
-    patch:
-      description: Accept an invite to a team
-      tags:
-      - user
-      
-      parameters:
-      - name: X-Authorization
-        in: header
-        schema:
-          type: string
-        required: true
-      - name: team_key
-        in: path
-        schema:
-          type: string
-        required: true
-          
-      responses:
-      
-        200:
-          description: A successful response
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: Success
-        
-        401:
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        
-        404:
-          description: Team not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-      
-  /user/<team_key>/decline:
-    delete:
-      description: Decline an invite to a team
-      tags:
-      - user
-      
-      parameters:
-      - name: X-Authorization
-        in: header
-        schema:
-          type: string
-        required: true
-      - name: team_key
         in: path
         schema:
           type: string
